--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www"
   },
@@ -24,6 +24,11 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "@shelf/jest-mongodb": "^4.1.0",
+    "body-parser": "^1.20.0",
+    "jest": "^29.0.2",
+    "mongodb-memory-server": "^8.9.1",
+    "nodemon": "^2.0.19",
+    "supertest": "^6.2.4"
   }
 }
