--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
